test: implemented AuthService unit test cases